--- a/index.html
+++ b/index.html
@@ -1,10 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Onekart – Compare Grocery Prices from BigBasket, Blinkit, JioMart & More</title>
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Onekart is India's smartest grocery price comparison app. Instantly compare prices from BigBasket, Blinkit, Swiggy Instamart, JioMart, and more – all in one app."
+    />
+
+    <!-- Keywords -->
+    <meta
+      name="keywords"
+      content="Onekart, grocery price comparison, grocery deals, BigBasket prices, Blinkit offers, Swiggy Instamart, JioMart deals, grocery delivery India"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Sigmatus Solutions Pvt Ltd" />
+
+    <!-- Open Graph (OG) Tags -->
+    <meta property="og:title" content="Onekart – Grocery Price Comparison App" />
+    <meta
+      property="og:description"
+      content="Compare grocery prices from top Indian platforms like BigBasket, Blinkit, Swiggy Instamart, and JioMart. Save more with Onekart."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://www.onekart.in" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Onekart – Grocery Price Comparison App" />
+    <meta
+      name="twitter:description"
+      content="India’s smart grocery comparison app. Find best deals across BigBasket, Blinkit, and more."
+    />
+    <meta name="twitter:image" content="/twitter-image.jpg" />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.onekart.co.in" />
   </head>
   <body>
     <div id="root"></div>
